# sivegeo

./: .gitignore  4.2.0  CHANGELOG.md  DATAFLOW.md  LICENSE.md  README.md  ROADMAP.md  STACK.md  STATUS.md  build.sh  environment.yml  pyproject.toml  user-guide.md
reports/: relatorio_sim.xlsx  relatorio_sinan.xlsx
src/: app.py  pages.toml
src/lab/core/: data_loader.py  loader.py  processor.py
src/lab/services/: determinantes.py  distribution.py  forecast.py  geomap.py  heatmap.py  historic_evolution.py  indicators.py  indices.py  kpis.py  piramid_etary.py  radar.py
src/pages/: determinants_page.py  distribution_page.py  forecast_page.py  geomap_page.py  heatmap_page.py  historic_evolution_page.py  indicators_page.py  indices_page.py  kpis_page.py  piramid_etary_page.py  radar_page.py
src/sivegeo_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
